--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="icon" href="Gamelogo.png" type="image/png" />
   </head>
   <body>
-    <h1>Simon Says Game</h1>
-    <h2>Press any key to start the game</h2>
+    <header>
+      <img src="Gamelogo.png" alt="Game Logo" class="logo" />
+      <h1>Simon Says Game</h1>
+      <h2>Press any key to start the game</h2>
+    </header>
 
     <div class="btn-container">
       <div class="line-one">
