--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       </div>
     </div>
 
+    <footer>
+      <p>&copy; 2024 Hafiz Abdul Rahman. All Rights Reserved.</p>
+    </footer>
+
     <script src="app.js"></script>
   </body>
 </html>
