--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
       </div>
     </div>
 
+    <!-- Game Over Overlay -->
+    <div id="game-over-overlay" class="overlay">
+      <p class="game-over-text">Game Over</p>
+    </div>
+
     <footer>
       <p>&copy; 2024 Hafiz Abdul Rahman. All Rights Reserved.</p>
     </footer>
